fix: fixed a problem where preview height was overflowing and causing scrollbar for app

--- a/src/components/preview/Preview.module.css
+++ b/src/components/preview/Preview.module.css
@@ -13,10 +13,13 @@
     }
 
     > main {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
 
         > .textBox {
+            flex: 1;
             width: 100%;
-            height: 100dvh;
             border-style: none;
             padding: 1rem;
             color: var(--color-700);
